# pybench

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.py  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
modules/: cpu_benchmark.py  disk_benchmark.py  gpu_benchmark.py  memory_benchmark.py
monitor/: aggregator.py  system_monitor.py
reporter/: exporter.py
scoring/: scorer.py
ui/: dashboard.py  formatter.py  results_view.py
