[project]
name = "pybench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gputil>=1.4.0",
    "numpy>=1.24.0",
    "nvidia-ml-py>=11.525.0",
    "psutil>=5.9.0",
    "py-cpuinfo>=9.0.0",
    "pyopencl>=2023.1",
    "rich>=13.0.0",
    "setuptools>=82.0.1",
]
